CSS de la hoja de servicio

--- a/SERVICIOS/servicios.html
+++ b/SERVICIOS/servicios.html
@@ -12,32 +12,38 @@
 
 <body>
     <header>
-        <nav>
-            <UL>
-                <li>SERVICIOS</li>
-                <LI>CONTACTANOS</LI>
-                <LI>PREGUNTAS FRECUENTES</LI>
-            </UL>
-            <img class="logo"
-                src="C:\Users\Usuario\Desktop\clasesIcaro\MEDINA-AM-Desinfecciones\IMAGENES\logo de la empresa.png"
-                alt="LogoDeAM">
-        </nav>
-
+        <div class="header">
+            <nav>
+                <UL>
+                    <a>SERVICIOS</a>
+                    <a>CONTACTANOS</a>
+                    <a>PREGUNTAS FRECUENTES</a>
+                
+                <img class="logo"
+                    src="C:\Users\Usuario\Desktop\clasesIcaro\MEDINA-AM-Desinfecciones\IMAGENES\logo de la empresa.png"
+                    alt="LogoDeAM">
+                </UL>
+            </nav>
+        </div>
     </header>
     <main>
-        <h1>DETALLES DEL SERVICIO Y PREGUNTAS FRECUENTES</h1>
+        <a>DETALLES DEL SERVICIO Y PREGUNTAS FRECUENTES</a>
         <section class="producto">
-            <p>SERVICIO DE DESINFECCION PARA UN DOMICILIO</p>
-            <p>$4.000</p>
+            <h1>SERVICIO DE DESINFECCION PARA UN DOMICILIO</h1>
+            <h2>$4.000</h2>
         </section>
-        <section>
-            <P>Es nesesario abandonar la casa ? Por cuanto tiempo? luego que se recomienda ?</P>
-            <P>No es necesario abandonar la casa despues del servicio ,solo se recomienda ventilar despues de media hora</P>
+        <section div="preguntas">
+            <p>Es nesesario abandonar la casa ? Por cuanto tiempo? luego que se recomienda ?</P>
+            <P>No es necesario abandonar la casa despues del servicio ,solo se recomienda ventilar despues de media hora
+            </P>
+        </section>
             <P>Es peligroso para las mascotas ? </P>
-            <P>La mayoria de los productos que utilizamos ,no afecta a las mascotas , de todos modos ,siempre recomendamos que las mantengan alejadas del lugar desinfectado </P>
+            <P>La mayoria de los productos que utilizamos ,no afecta a las mascotas , de todos modos ,siempre
+                recomendamos que las mantengan alejadas del lugar desinfectado </P>
             <P>Con cuanto tiempo de antelacion se puede llamar ? </P>
-            <P>Nos pueden llamar con un dia de anticipacion y podremos ir al dia siguiente o durante esa misma semana </P>
-        </section>
+            <P>Nos pueden llamar con un dia de anticipacion y podremos ir al dia siguiente o durante esa misma semana
+            </P>
+        
     </main>
 
 </body>
