--- a/HOME/Home.html
+++ b/HOME/Home.html
@@ -12,15 +12,16 @@
 
 <body>
     <header>
+        <div class="header">
         <nav>
             <UL>
-                <li>SERVICIOS</li>
-                <LI>CONTACTANOS</LI>
-                <LI>PREGUNTAS FRECUENTES</LI>
-            <img class="logo" src="C:\Users\Usuario\Desktop\clasesIcaro\MEDINA-AM-Desinfecciones\IMAGENES\logo de la empresa.png"
-                alt="LogoDeAM">
+                <a>SERVICIOS</a>
+                <a>CONTACTANOS</a>
+                <a>PREGUNTAS FRECUENTES</a>
+            <img class="logo" src="../IMAGENES/logo de la empresa.png"alt="LogoDeAM">
             </UL>
         </nav>
+    </div>
     </header>
 
 
@@ -43,9 +44,9 @@
     </main>
 </body>
 <footer>
-    <p>+54 9 351 226-2974</p>
-    <p>AM DESINFECCIONES</p>
-    <P>AM DESINFECCIONES</P>
+    <p> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face" >AM DESINFECCIONES</p>
+    <p> <img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp" >+54 9 351 226-2974 </p>
+    <P> <img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</P>
      
 </footer>
 
