--- a/SERVICIOS/servicios.html
+++ b/SERVICIOS/servicios.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVICIOS-AM DESINFECCIONES</title>
     <link rel="stylesheet" href="servicios.css">
+   
 </head>
 
 <body>
@@ -18,10 +19,7 @@
                     <a>SERVICIOS</a>
                     <a>CONTACTANOS</a>
                     <a>PREGUNTAS FRECUENTES</a>
-                
-                <img class="logo"
-                    src="C:\Users\Usuario\Desktop\clasesIcaro\MEDINA-AM-Desinfecciones\IMAGENES\logo de la empresa.png"
-                    alt="LogoDeAM">
+                <img class="logo"src="../IMAGENES/logo de la empresa.png" alt="LogoDeAM">
                 </UL>
             </nav>
         </div>
@@ -48,9 +46,9 @@
 
 </body>
 <footer>
-    <p>+54 9 351 226-2974</p>
-    <p>AM DESINFECCIONES</p>
-    <P>AM DESINFECCIONES</P>
+    <p> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face" >AM DESINFECCIONES</p>
+    <p> <img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp" >+54 9 351 226-2974 </p>
+    <P> <img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</P>
 </footer>
 
 </html>
