Añadi iconos en el Nav y actualice el README

--- a/SERVICIOS/servicios.html
+++ b/SERVICIOS/servicios.html
@@ -16,10 +16,10 @@
         <div class="header">
             <nav>
                 <UL>
-                    <a>SERVICIOS</a>
-                    <a>CONTACTANOS</a>
-                    <a>PREGUNTAS FRECUENTES</a>
-                <img class="logo"src="../IMAGENES/logo de la empresa.png" alt="LogoDeAM">
+                    <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest"> SERVICIOS</a>
+                        <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">CONTACTANOS</a>
+                        <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">PREGUNTAS FRECUENTES</a>
+                        <img class="logo"src="../IMAGENES/logo de la empresa.png" alt="LogoDeAM">
                 </UL>
             </nav>
         </div>
