Avance en el mobile first

--- a/HOME/Home.html
+++ b/HOME/Home.html
@@ -14,11 +14,13 @@
     <header>
         <div class="header">
         <nav>
+            <hr></hr>
             <UL>
+                
                 <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest"> SERVICIOS</a>
                 <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">CONTACTANOS</a>
                 <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">PREGUNTAS FRECUENTES</a>
-                <img class="logo" src="../IMAGENES/logo de la empresa.png"alt="LogoDeAM">
+                <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png"alt="LogoDeAM">
             </UL>
         </nav>
     </div>
