--- a/SERVICIOS/servicios.html
+++ b/SERVICIOS/servicios.html
@@ -8,47 +8,103 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVICIOS-AM DESINFECCIONES</title>
     <link rel="stylesheet" href="servicios.css">
-   
+
 </head>
 
 <body>
     <header>
-        <div class="header">
-            <nav>
-                <UL>
-                    <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest"> SERVICIOS</a>
-                        <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">CONTACTANOS</a>
-                        <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">PREGUNTAS FRECUENTES</a>
-                        <img class="logo"src="../IMAGENES/logo de la empresa.png" alt="LogoDeAM">
-                </UL>
-            </nav>
-        </div>
+        <nav>
+            <hr>
+            </hr>
+            <ul>
+                <div><img src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
+                    <p>SERVICIOS</p>
+                </div>
+                <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
+                    <p>CONTACTANOS</p>
+                </div>
+                <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
+                    <p>PREGUNTAS FRECUENTES</p>
+                </div>
+                <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
+            </ul>
+        </nav>
     </header>
     <main>
-        <a>DETALLES DEL SERVICIO Y PREGUNTAS FRECUENTES</a>
-        <section class="producto">
-            <h1>SERVICIO DE DESINFECCION PARA UN DOMICILIO</h1>
-            <h2>$4.000</h2>
-        </section>
-        <section div="preguntas">
-            <p>Es nesesario abandonar la casa ? Por cuanto tiempo? luego que se recomienda ?</P>
-            <P>No es necesario abandonar la casa despues del servicio ,solo se recomienda ventilar despues de media hora
-            </P>
-        </section>
-            <P>Es peligroso para las mascotas ? </P>
-            <P>La mayoria de los productos que utilizamos ,no afecta a las mascotas , de todos modos ,siempre
-                recomendamos que las mantengan alejadas del lugar desinfectado </P>
-            <P>Con cuanto tiempo de antelacion se puede llamar ? </P>
-            <P>Nos pueden llamar con un dia de anticipacion y podremos ir al dia siguiente o durante esa misma semana
-            </P>
+        <h1>DETALLES DEL SERVICIO Y PREGUNTAS FRECUENTES</h1>
+        <div class="producto">
+            <p1>SERVICIO DE DESINFECCION PARA UN DOMICILIO</p1>
+            <p2>$4.000</p2>
+        </div>
+        <div class="contenedo_msj">
+            <!-- mensaje izq -->
+            <div class="mensaje-izq">
+                <div class="cuerpo_msj">
+                    <div class="msj-texto">
+                        <p>Es nesesario abandonar la casa ? Por cuanto tiempo? luego que se recomienda ?</P>
+                    </div>
+                </div>
+            </div>
+            <!-- mensaje der -->
+            <div class="mensaje-der">
+                <div class="cuerpo_msj">
+                    <div class="msj-texto">
+                        <p>No es necesario abandonar la casa despues del servicio ,solo se recomienda ventilar despues
+                            de media hora</P>
+                    </div>
+                </div>
+            </div>
+
+            <!-- mensaje izq -->
+            <div class="mensaje-izq">
+                <div class="cuerpo_msj">
+                    <div class="msj-texto">
+                        <P>Es peligroso para las mascotas ? </P>
+                    </div>
+                </div>
+            </div>
+            <!-- mensaje der -->
+            <div class="mensaje-der">
+                <div class="cuerpo_msj">
+                    <div class="msj-texto">
+                        <P>La mayoria de los productos que utilizamos ,no afecta a las mascotas , de todos modos
+                            ,siempre recomendamos que las mantengan alejadas del lugar desinfectado</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- mensaje izq -->
+            <div class="mensaje-izq">
+                <div class="cuerpo_msj">
+                    <div class="msj-texto">
+                        <P>Con cuanto tiempo de antelacion se puede llamar ? </P>
+                    </div>
+                </div>
+            </div>
+            <!-- mensaje der -->
+            <div class="mensaje-der">
+                <div class="cuerpo_msj">
+                    <div class="msj-texto">
+                        <P>Nos pueden llamar con un dia de anticipacion y podremos ir al dia siguiente o durante esa
+                            misma semana</P>
+                    </div>
+                </div>
+            </div>
+        </div>
         
     </main>
 
 </body>
 <footer>
-    <p> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face" >AM DESINFECCIONES</p>
-    <p> <img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp" >+54 9 351 226-2974 </p>
-    <P> <img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</P>
+    <div> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">
+        <p>AM DESINFECCIONES</p>
+    </div>
+    <div><img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">
+        <P>+54 9 351 226-2974 </p>
+    </div>
+    <div><img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">
+        <P>AM DESINFECCIONES</P>
+    </div>
 </footer>
 
 </html>
