--- a/HOME/Home.html
+++ b/HOME/Home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,18 +11,19 @@
 
 <body>
     <header>
-        <div class="header">
         <nav>
             <hr></hr>
-            <UL>
-                
-                <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest"> SERVICIOS</a>
-                <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">CONTACTANOS</a>
-                <a><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">PREGUNTAS FRECUENTES</a>
-                <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png"alt="LogoDeAM">
-            </UL>
+            <ul>
+                <div><img src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
+                    <p>SERVICIOS</p></div>
+                <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
+                    <p>CONTACTANOS</p></div>
+                <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
+                    <p>PREGUNTAS FRECUENTES</p></div>
+                <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
+            </ul>
         </nav>
-    </div>
+        </div>
     </header>
 
 
@@ -36,7 +36,7 @@
         <p>DETALLES</p>
         <section>
             <p>SERVICIO DE DESINFECCION PARA UN LOCAL COMERCIAL</p>
-            <P$2.500</P>
+            <P$2.500< /P>
         </section>
         <p>DETALLES</p>
         <section>
@@ -46,10 +46,10 @@
     </main>
 </body>
 <footer>
-    <p> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face" >AM DESINFECCIONES</p>
-    <p> <img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp" >+54 9 351 226-2974 </p>
+    <p> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">AM DESINFECCIONES</p>
+    <p> <img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974 </p>
     <P> <img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</P>
-     
+
 </footer>
 
 </html>
