--- a/SERVICIOS/servicios.html
+++ b/SERVICIOS/servicios.html
@@ -14,18 +14,14 @@
 <body>
     <header>
         <nav>
-            <hr>
-            </hr>
+            <hr></hr>
             <ul>
                 <div><img src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>SERVICIOS</p>
-                </div>
+                    <p>SERVICIOS</p></div>
                 <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>CONTACTANOS</p>
-                </div>
+                    <p>CONTACTANOS</p></div>
                 <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>PREGUNTAS FRECUENTES</p>
-                </div>
+                    <p>PREGUNTAS FRECUENTES</p></div>
                 <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
             </ul>
         </nav>
