inicio de modelo vista controlador

--- a/CARRITO/CARRITO.html
+++ b/CARRITO/CARRITO.html
@@ -56,7 +56,7 @@
         <div class="box-servicio">
             <p>SERVICIO PARA PLANTAS O MAS DE UN LOCAL</p>
         </div>
-        <div class="box-cantidades">
+        <div class="box-precio">
             <select name="cantidad de locales" id="cant">
                 <option selected value="2">2 LOCALES</option>
                 <option value="3">3 LOCALES</option>
@@ -64,7 +64,7 @@
                 <option value="5">MAS DE 5 LOCALES</option>
             </select>
         </div>
-            <div class="box-precio">
+            <div class="box-solicitar">
             <button>SOLICITAR</button>   
             </div>
         </div>
@@ -72,10 +72,9 @@
     </main>
 </body>
 <footer>
-    <div class="footer"> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">AM DESINFECCIONES</div>
-    <div class="footer"> <img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974 </div>
-    <div class="footer"> <img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</div>
-
+    <div class="footer"><a href="https://www.facebook.com/AMDesinfecciones/" target="_blank" style="text-decoration:none"> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">AM DESINFECCIONES</a></div>
+    <div class="footer"><a href="https://wa.me/c/5493512262974" target="_blank" style="text-decoration:none"><img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974</a></div>
+    <div class="footer"><a href="https://www.instagram.com/amdesinfecciones/?hl=es-la" target="_blank" style="text-decoration:none"><img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</a></div>
 </footer>
 
 </html>
