--- a/HOME/Home.html
+++ b/HOME/Home.html
@@ -12,14 +12,18 @@
 <body>
     <header>
         <nav>
-            <hr></hr>
+            <hr>
+            </hr>
             <ul>
                 <div><img src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>SERVICIOS</p></div>
+                    <p>SERVICIOS</p>
+                </div>
                 <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>CONTACTANOS</p></div>
+                    <p>CONTACTANOS</p>
+                </div>
                 <div><IMG src="https://api.iconify.design/ic/outline-pest-control.svg" ALT="IconPest">
-                    <p>PREGUNTAS FRECUENTES</p></div>
+                    <p>PREGUNTAS FRECUENTES</p>
+                </div>
                 <img class="logo" src="../IMAGENES/LogoDeLaEmpresa.png" alt="LogoDeAM">
             </ul>
         </nav>
@@ -29,27 +33,37 @@
 
     <main>
         <h1>NUESTROS SERVICIOS</h1>
-        <section>
+        <div class="box">
             <p>SERVICIO DE DESINFECCION PARA UN DOMICILIO</p>
-            <p>$4.000</p>
-        </section>
-        <p>DETALLES</p>
-        <section>
+            <div class="precio">$4.000</div>
+            <button>SOLICITAR</button>
+        </div>
+        <div class="box">
             <p>SERVICIO DE DESINFECCION PARA UN LOCAL COMERCIAL</p>
-            <P$2.500< /P>
-        </section>
-        <p>DETALLES</p>
-        <section>
+            <div class="precio">$2.500</div>
+            <button>SOLICITAR</button>
+        </div>
+
+        <div class="box">
             <p>SERVICIO PARA PLANTAS O MAS DE UN LOCAL</p>
-        </section>
-        <p>DETALLES</p>
+            <select name="cantidad de locales" id="cant">
+                <option selected value="2">2 LOCALES</option>
+                <option value="3">3 LOCALES</option>
+                <option value="4">4 LOCALES</option>
+                <option value="5">MAS DE 5 LOCALES</option></select>
+            <button>MAS DETALLES</button>
+        </div>
     </main>
 </body>
 <footer>
-    <p> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">AM DESINFECCIONES</p>
-    <p> <img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974 </p>
-    <P> <img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</P>
-
+    <div class="footer"><a href="https://www.facebook.com/AMDesinfecciones/" target="_blank"
+            style="text-decoration:none"> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">AM
+            DESINFECCIONES</a></div>
+    <div class="footer"><a href="https://wa.me/c/5493512262974" target="_blank" style="text-decoration:none"><img
+                class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974</a></div>
+    <div class="footer"><a href="https://www.instagram.com/amdesinfecciones/?hl=es-la" target="_blank"
+            style="text-decoration:none"><img class="LogoDeInsta" src="../IMAGENES/instagram.png"
+                alt="Logo de Instagram">AM DESINFECCIONES</a></div>
 </footer>
 
 </html>
