--- a/SERVICIOS/servicios.html
+++ b/SERVICIOS/servicios.html
@@ -92,15 +92,10 @@
 
 </body>
 <footer>
-    <div> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">
-        <p>AM DESINFECCIONES</p>
-    </div>
-    <div><img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">
-        <P>+54 9 351 226-2974 </p>
-    </div>
-    <div><img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">
-        <P>AM DESINFECCIONES</P>
-    </div>
+    <div class="footer"><a href="https://www.facebook.com/AMDesinfecciones/" target="_blank" style="text-decoration:none"> <img class="logoDeFace" src="../IMAGENES/facebook.png" alt="logo de face">AM DESINFECCIONES</a></div>
+    <div class="footer"><a href="https://wa.me/c/5493512262974" target="_blank" style="text-decoration:none"><img class="LogoDeWhats" src="../IMAGENES/whatsapp.png" alt="logo de wpp">+54 9 351 226-2974</a></div>
+    <div class="footer"><a href="https://www.instagram.com/amdesinfecciones/?hl=es-la" target="_blank" style="text-decoration:none"><img class="LogoDeInsta" src="../IMAGENES/instagram.png" alt="Logo de Instagram">AM DESINFECCIONES</a></div>
+
 </footer>
 
 </html>
